getting gravatar profile json
